fix: hiding scrollbar on vehicle cards

--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,10 @@
 
 @layer utilities {
 
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
+
   /* Background */
   .bg-background-default {
     background-color: var(--color-bg-default);
